--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "styled-component": "^2.8.0",
     "web-vitals": "^2.1.4"
   },
@@ -40,5 +42,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@hookform/devtools": "^4.3.1"
   }
 }
