--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "styled-component": "^2.8.0",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
