--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "multiplayer-trivial-game",
   "version": "0.1.0",
   "private": true,
-  
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -12,6 +11,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vercel/speed-insights": "^1.0.9",
     "awesome-notifications": "^3.1.3",
     "axios": "^1.5.0",
     "json-server": "^0.17.3",
